<resources>

    <!-- These are all the strings for the Sign Up page -->
    <string name="app_name">ST10262898_BUDGETBUNNY_POEPART2</string>
    <string name="welcome">Welcome to</string>
    <string name="budgetBunny">Budget Bunny</string>
    <string name="signUp">Sign up to start saving</string>
    <string name="promptUsername">Please enter a username:</string>
    <string name="enterUsername">Username</string>
    <string name="promptPassword">Please enter password:</string>
    <string name="enterPassword">Password</string>
    <string name="passwordRequirements">Password Requirements:</string>
    <string name="passwordListRequirements">•Minimum 8 characters\n •Includes Number\n •Includes Symbol</string>
    <string name="btn_signUp">Sign Up</string>

    <!-- These are the strings for the Login page -->
    <string name="welcome_back_to">Welcome back to</string>
    <string name="budgetbunny">BudgetBunny</string>
    <string name="log_in_to_start_saving">Log in to start saving</string>
    <string name="or_log_in_using">or, Log In using:</string>
    <string name="instagram_login">Instagram Login</string>
    <string name="apple_login">Apple Login</string>
    <string name="google_login">Google Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_an_account_below_to_start">Create an account below to start.</string>
    <string name="x">X</string>
    <string name="sign_up_complete">Sign-up Complete</string>
    <string name="here_s_50_coins_to_get_you_started_on_your_budgetbunny_journey">Here\'s 50 coins to get you started on your BudgetBunny journey</string>
    <string name="you_re_ready_to_start_saving">You\'re ready to start saving!</string>
    <string name="reward_coin">reward coin</string>
    <string name="add_a_custom_expense">Add a custom expense</string>
    <string name="you_can_change_this_later">*You can change this later</string>
    <string name="next">Next</string>
    <string name="expense">Expense</string>
    <string name="choose_an_icon">Choose an icon</string>
    <string name="expensehint">Expense</string>
    <string name="sun">Sun</string>
    <string name="pin">Pin</string>
    <string name="phone">Phone</string>
    <string name="flower">Flower</string>
    <string name="Enter_username">  Enter Usename</string>
    <string name="Enter_password">  Enter Password</string>
    <string name="log_in">Log In</string>


    <!-- These are the Strings on the HomePage -->
    <string name="Home"><u>Budget Bunny</u></string>
    <string name="Overview">Overview</string>
    <string name="CategoriesGraph"><u>Goal Categories Graph</u></string>
    <string name="Balances"><u>Income Expenses Balance</u></string>
    <string name="bunnyName"><u>Budget Bunny</u></string>
    <string name="Gamification">Gamification feature</string>
    <string name="ComingSoon">Coming Soon!</string>
    <string name="RecentTransactions"><u>Recent Transactions</u></string>
    <string name="BudgetOverview"><u>Expense Categories</u></string>

    <!--These are the strings on the name bunny page -->
    <string name="settingUp">We are almost done setting you up </string>
    <string name="nameBunnyPrompt"><u>Name your bunny</u></string>
    <!-- These are the Strings on the budget goals -->
    <string name="budget_goal_question">What is your %s budget goal</string>
    <string name="enter_an_amount"> Enter an amount</string>

    <!-- These are the strings on the custom budget page -->
    <string name="custom_category"> Enter a cateorgy</string>
    <string name="custom_category_goal"> Enter a goal</string>
    <string name="what_are_your_expenses">What are your expenses?</string>
    <string name="bills">bills</string>
    <string name="car">car\n</string>
    <string name="emergencies">emergencies</string>
    <string name="entertainment">entertainment</string>
    <string name="food">food</string>
    <string name="rent">rent</string>
    <string name="hobbies">hobbies</string>
    <string name="custom_button">customButton</string>

    <!-- These are the strings for the budget goals Overview page -->
    <string name="BudgetBunny">Budget Bunny</string>
    <string name="budgetGoalTitle">Monthly Budget?</string>
    <string name="Categories"><u>Categories</u></string>

    <!-- These are the strings for the activity expense entry -->
    <string name="enter_an_expense">Please enter an expense</string>
    <string name="expense_amount">Expense Amount</string>
    <string name="expense_name">Expense Name</string>
    <string name="expense_category">Expense Category</string>
    <string name="choose_a_category">Choose a category</string>
    <string name="expensename">Enter Name</string>

    <string-array name="dropdown_items">
        <item>Food</item>
        <item>Transport</item>
        <item>Entertainment</item>
        <item>Health</item>
        <item>Utilities</item>
    </string-array>

    <!-- These are strings from the transactions page -->
    <string name="yourExpenses"><u>Top Expense Categories</u></string>
    <string name="transactions"><u>Transactions</u></string>
    <string name="monthsAtAGlance"><u>Months at a glance</u></string>
    <string name="monthly_payment_amount">Payment amount?</string>
    <string name="enter_an_amount_">Enter an amount</string>

    <!-- These are strings from the transactions page -->
    <string name="settings">Settings</string>
    <string name="personal_and_security">"Personal and Security</string>
    <string name="set_profile">• Profile</string>
    <string name="set_password">• Add Passcode</string>
    <string name="set_link_another_account">• Link Another Account</string>
    <string name="set_budget_and_financial">Budget and Financial</string>
    <string name="set_budget_goal">• Budget Goal</string>
    <string name="set_budget_currency">• Budget Currency</string>
    <string name="set_notifications_and_reminders">Notifications and Reminders</string>
    <string name="_set_set_reminder">• Set Reminder</string>
    <string name="set_app_customisation">App Customisation</string>
    <string name="set_app_appearance">• App Appearance</string>
    <string name="set_date_and_time">• Date and Time</string>
    <string name="set_help_and_support">Help and Support</string>
    <string name="set_faq">• FAQ</string>

    <!-- These are the strings for the invitation screen
    <string name="inv_welcome_back_to">Welcome back to</string>
    <string name="inv_budgetbunny">BudgetBunny</string> -->

    <!-- Final Screen strings -->
    <string name="return_to_dashboard">Finish</string>
    <string name="you_re_signed_up">You\'re signed up!</string>
    <string name="now_let_s_set_up_your_profile">now, let\'s set up your profile</string>
    <string name="goal_budget">Goal Budget</string>
    <string name="amount">Amount</string>
    <string name="income">Income</string>
    <string name="please_enter_date">Please enter date</string>
    <string name="please_enter_amount">Please enter amount</string>
    <string name="please_enter_income">Please enter income</string>
    <string name="date">Date</string>

    <!-- This is for the View months at glance screen -->
    <string name="no_expenses_found">No expenses found for selected period</string>
    <string name="user_not_logged_in">User not logged in</string>
    <string name="select_both_dates">Please select both dates</string>
    <string name="invalid_date_range">End date must be after start date</string>

</resources>