<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    tools:context=".ExpenseList">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/assistant_extrabold"
        android:text="@string/what_are_your_expenses"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/you_can_change_this_later"
        android:textColor="@color/material_dynamic_neutral40"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/assistant_extrabold"
        android:text="@string/next"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915"
        app:rippleColor="@color/regalia" />

    <ImageButton
        android:id="@+id/bills"
        android:layout_width="146dp"
        android:layout_height="83dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/custum"
        android:contentDescription="@string/bills"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:srcCompat="@drawable/billsnobg" />

    <ImageButton
        android:id="@+id/carButton"
        android:layout_width="146dp"
        android:layout_height="83dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/custum"
        android:contentDescription="@string/car"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/bills"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:srcCompat="@drawable/car" />

    <ImageButton
        android:id="@+id/emergenciesButton"
        android:layout_width="146dp"
        android:layout_height="83dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/custum"
        android:contentDescription="@string/emergencies"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bills"
        app:srcCompat="@drawable/emerge" />

    <ImageButton
        android:id="@+id/entertainmentButton"
        android:layout_width="146dp"
        android:layout_height="83dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/custum"
        android:contentDescription="@string/entertainment"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/emergenciesButton"
        app:layout_constraintTop_toBottomOf="@+id/carButton"
        app:srcCompat="@drawable/entertainment" />

    <ImageButton
        android:id="@+id/foodButton"
        android:layout_width="146dp"
        android:layout_height="83dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/custum"
        android:contentDescription="@string/food"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emergenciesButton"
        app:srcCompat="@drawable/bills" />

    <ImageButton
        android:id="@+id/hobbiesButton"
        android:layout_width="146dp"
        android:layout_height="83dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custum"
        android:contentDescription="@string/hobbies"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/foodButton"
        app:layout_constraintTop_toBottomOf="@+id/entertainmentButton"
        app:srcCompat="@drawable/hobby" />

    <ImageButton
        android:id="@+id/rentButton"
        android:layout_width="146dp"
        android:layout_height="83dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custum"
        android:contentDescription="@string/rent"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodButton"
        app:srcCompat="@drawable/rentbutto" />

    <ImageButton
        android:id="@+id/customButton"
        android:layout_width="146dp"
        android:layout_height="83dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/custum"
        android:contentDescription="@string/custom_button"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/rentButton"
        app:layout_constraintTop_toBottomOf="@+id/hobbiesButton"
        app:srcCompat="@drawable/custombutton" />

</androidx.constraintlayout.widget.ConstraintLayout>